--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "description": "A cyber lodge for Daniel Castrillo",
   "scripts": {
     "start": "webpack-dev-server",
+    "api": "nodemon --exec node server/server.js",
     "build": "webpack -p",
     "lint": "standard & flow; test $? -eq 0 -o $? -eq 2"
   },
   "dependencies": {
+    "express": "^4.14.1",
+    "express-graphql": "^0.6.3",
     "graphql": "^0.9.1",
     "history": "^4.5.1",
     "kerberos": "0.0.22",
     "mongodb": "^2.2.24",
+    "pg": "^6.1.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-router": "^3.0.2"
@@ -24,6 +28,7 @@
     "babel-preset-react": "^6.22.0",
     "babel-preset-stage-2": "^6.22.0",
     "css-loader": "^0.26.1",
+    "humps": "^2.0.0",
     "node-sass": "^4.5.0",
     "nodemon": "^1.11.0",
     "postcss-loader": "^1.3.0",
